Add API interface

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -5,13 +5,14 @@ description = "API endpoints for the writer tools extension"
 authors = ["Willem Meints"]
 license = "MIT"
 readme = "README.md"
-packages = [{include = "writer_tools"}]
+packages = [{ include = "writer_tools" }]
 
 [tool.poetry.dependencies]
-python = "3.12"
+python = "^3.12"
 langchain = "^0.1.0"
 fastapi = "^0.108.0"
 typer = "^0.9.0"
+uvicorn = "^0.25.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
@@ -21,3 +22,7 @@ flake8 = "^7.0.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.poetry.scripts]
+writer-tools = "writer_tools.cli:main"
