--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -13,6 +13,8 @@ langchain = "^0.1.0"
 fastapi = "^0.108.0"
 typer = "^0.9.0"
 uvicorn = "^0.25.0"
+langchain-openai = "^0.0.2"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
